--- a/Day_01/HTML_CSS/Bai_1/main.css
+++ b/Day_01/HTML_CSS/Bai_1/main.css
@@ -1,10 +1,13 @@
+body {
+    margin: 0;
+}
 .navbar {
     overflow:hidden ;
-    background-color: #333;
+    background-color:  #333;
     position: fixed;
     top: 0;
     width: 100%;
-
+    margin: 0 auto;
 }
 
 .navbar a{
@@ -12,10 +15,10 @@
     display: block;
     color: #fffbfb;
     text-align: center;
-    padding: 14px 16px ;
+    padding: 14px 25px ;
     text-decoration: none;
     font-size: 17px;
-
+    
 }
 
 .navbar a:hover{
@@ -25,7 +28,7 @@
 }
 
 .main {
-    padding: 16px;
+    padding: 25px;
     margin-top: 30px;
     height: 1500px;
     
